feat: adding a way to get connected ip
